PROMPT: Same thing, but now with new items in here:@QuestionWordTables.md
 After you finish, please place the processed files in zz-arc and their respective folders.

--- a/z-Prompts/251126.md
+++ b/z-Prompts/251126.md
@@ -1,3 +1,9 @@
 modify or run this project to create study guides (leave the styles the same) for everything inside this:
 
 DO NOT leave anything out.  
+
+---
+
+Same thing, but now with new items in the folder:
+
+After you finish, please place the processed files in zz-arc and their respective folders. 
